# trading-engine

./: .env.example  .gitmodules  CMakeLists.txt  README.md
api/: CMakeLists.txt
api/include/api/: provider_factory.h
api/include/api/client/: alpaca_client.h
api/include/api/parser/alpaca/: alpaca_asset_parser.h  alpaca_bar_parser.h
api/include/api/provider/: alpaca_data_provider.h  data_provider.h  data_provider_factory.h
api/include/api/service/: asset_service.h  market_history_service.h
api/include/api/service/alpaca/: alpaca_asset_service.h  alpaca_market_history_service.h
api/src/api/: data_provider_factory.cpp
api/src/api/alpaca/: alpaca_asset_parser.cpp  alpaca_asset_service.cpp  alpaca_bar_parser.cpp  alpaca_client.cpp  alpaca_market_history_service.cpp
backtest-engine/: CMakeLists.txt
backtest-engine/src/: main.cpp
backtesting/: CMakeLists.txt
backtesting/src/: main.cpp
core/: CMakeLists.txt
core/include/core/: asset.h  bar.h  ohlc_bar.h  time_util.h
core/src/: asset.cpp  ohlc_bar.cpp  time_util.cpp
